Fix UI layout